fixed tests added tracer.core added interfaces added abstractions

--- a/tracer.serialization/tracer.serialization.json/tracer.serialization.json.csproj
+++ b/tracer.serialization/tracer.serialization.json/tracer.serialization.json.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\tracer\tracer.serialization.abstractions\tracer.serialization.abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
