--- a/tracer.serialization/tracer.serialization.yaml/tracer.serialization.yaml.csproj
+++ b/tracer.serialization/tracer.serialization.yaml/tracer.serialization.yaml.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\tracer\tracer.serialization.abstractions\tracer.serialization.abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
