--- a/tracer.serialization/tracer.serialization.yaml/tracer.serialization.yaml.csproj
+++ b/tracer.serialization/tracer.serialization.yaml/tracer.serialization.yaml.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\tracer\tracer.serialization.abstractions\tracer.serialization.abstractions.csproj" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy &quot;$(OutDir)*.dll&quot; &quot;D:\5 sem\spp\lab1\spp-lab1\tracer\tracer.example\plugins&quot;" />
+  </Target>
 
 </Project>
