--- a/tracer/tracer.core/tracer.core.csproj
+++ b/tracer/tracer.core/tracer.core.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\tracer.serialization.abstractions\tracer.serialization.abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
